--- a/Microsoft/style.css
+++ b/Microsoft/style.css
@@ -18,6 +18,10 @@ a {
   margin: 0 auto;
 }
 
+
+/* ================ 
+    Main navbar   
+================ */
 .menu {
   display: flex;
   margin-top: 1em;
@@ -40,17 +44,18 @@ a {
   width: 110px;
 }
 
-
 .menu > ul a {
   font-size: .85rem;
   padding-bottom: 2px;
 }
 .menu > ul a:hover {
-  /* color: blue; */
   border-bottom: 1px solid #262626;
-  /* transition: width 2s; */
 }
 
+
+/* ================ 
+      Banner  
+================ */
 .banner {
   padding: .5em 0;
   background-color: #0067b8;
@@ -76,3 +81,56 @@ a {
   border-bottom: 1px solid #fafafa;
 }
 
+
+/* ================ 
+      Slideshow  
+================ */
+.slideshow {
+  display: flex;
+  align-items: center;
+  background-color: #f4f4f4;
+}
+
+.slideshow img {
+  width: 100%;
+}
+
+.slideshow .promo-text {
+  /* border: 1px solid red; */
+  margin: auto;
+}
+
+.promo-text .badge {
+  display: inline-block;
+  background-color: #9bf00b;
+  font-weight: bold;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+}
+
+.promo-text h3 {
+  font-size: 1.3rem;
+  margin-bottom: .75em;
+}
+
+.promo-text .text {
+  font-size: .95rem;
+  margin-bottom: 2em;
+}
+
+.promo-text .btn-primary {
+  background-color: #000;
+  color: #fff;
+  padding: 5px 20px;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.promo-text .btn-secondary {
+  color: #000;
+  padding: 5px 20px;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: bold;
+}
