--- a/Microsoft/style.css
+++ b/Microsoft/style.css
@@ -279,8 +279,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  margin-bottom: 10rem;
+  margin-bottom: 3em;
   height: 450px;
   position: relative;
 }
@@ -316,3 +315,46 @@ a {
   font-weight: bold;
 }
 
+.follow {
+  display: flex;
+  gap: 2em;
+  margin-bottom: 3em;
+  align-items: center;
+}
+
+.links {
+  background-color: #f2f2f2;
+  padding-block: 1em;
+  margin-bottom: 2em;
+}
+
+.links-inner {
+  display: flex;
+  justify-content: space-between;
+  line-height: 2;
+}
+.links-inner ul li h3 {
+  font-size: .85rem;
+}
+.links-inner ul li a {
+  font-size: 10px;
+}
+
+.footer-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 10px;
+  margin-bottom: 3em;
+}
+.footer-inner .lang {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
+}
+.footer-inner ul {
+  display: flex;
+  font-size: 10px;
+  gap : 3em
+}
